<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_marginBottom="16dp"
    android:elevation="20dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo">

        <TextView
            android:id="@+id/tvData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/data"
            android:textSize="20sp"
            android:textColor="@color/colorTexto"
            app:layout_constraintBottom_toTopOf="@id/tvModulo"
            app:layout_constraintStart_toEndOf="@id/imaxe"
            app:layout_constraintTop_toBottomOf="@id/tvTitulo" />
        <TextView
            android:id="@+id/tvModulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/modulo"
            android:textSize="20sp"
            android:textColor="@color/colorTexto"
            app:layout_constraintBottom_toBottomOf="@+id/imaxe"
            app:layout_constraintStart_toEndOf="@+id/imaxe" />

        <ImageView
            android:id="@+id/imaxe"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/tituloNota"
            android:textSize="20sp"
            android:textColor="@color/colorTexto"
            app:layout_constraintStart_toEndOf="@id/imaxe"
            app:layout_constraintTop_toTopOf="@id/imaxe" />

        <CheckBox
            android:id="@+id/cbxEliminar"
            android:layout_width="32dp"
            android:layout_height="34dp"
            android:layout_marginStart="160dp"
            app:layout_constraintBottom_toBottomOf="@+id/imaxe"
            app:layout_constraintStart_toEndOf="@+id/imaxe"
            app:layout_constraintTop_toTopOf="@+id/imaxe"
            app:layout_constraintVertical_bias="0.451" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

