<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

     <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondo">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cardElevation="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card"
                tools:context=".Login.MainActivity">

                <TextView
                    android:id="@+id/txvLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/colorTexto"
                    android:text="@string/login"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.085" />

                <EditText
                    android:id="@+id/etNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@color/transparencia"
                    android:elevation="2dp"
                    android:ems="10"
                    android:textColorHint="@color/colorHint"
                    android:textColor="@color/colorTexto"
                    android:hint="@string/nome"
                    android:inputType="text"
                    android:padding="12dp"
                    style="@style/editT"
                    app:layout_constraintEnd_toEndOf="@+id/txvLogin"
                    app:layout_constraintHorizontal_bias="0.45"
                    app:layout_constraintStart_toStartOf="@+id/txvLogin"
                    app:layout_constraintTop_toBottomOf="@+id/txvLogin" />


                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@color/transparencia"
                    android:elevation="2dp"
                    android:ems="10"
                    android:textColorHint="@color/colorHint"
                    android:textColor="@color/colorTexto"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    style="@style/editT"
                    android:drawableRight="@drawable/ic_visible"
                    app:layout_constraintEnd_toEndOf="@+id/txvLogin"
                    app:layout_constraintHorizontal_bias="0.45"
                    app:layout_constraintStart_toStartOf="@+id/txvLogin"
                    app:layout_constraintTop_toBottomOf="@+id/etNome" />


                <Button
                    android:id="@+id/btAcceder"
                    style="@style/botones"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/acceder"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/colorTexto"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/etPassword"
                    app:layout_constraintStart_toEndOf="@+id/btRexistrarse"
                    app:layout_constraintTop_toBottomOf="@+id/etPassword"
                    tools:ignore="MissingConstraints" />

                <Button
                    android:id="@+id/btRexistrarse"
                    style="@style/botones"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="10dp"
                    android:padding="0dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/colorTexto"
                    android:text="@string/rexistrarse"
                    app:layout_constraintEnd_toStartOf="@+id/btAcceder"
                    app:layout_constraintStart_toStartOf="@+id/etPassword"
                    app:layout_constraintTop_toBottomOf="@+id/etPassword" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>